daily api 리펙토링([영화의 영어명 조회 결과, 배우 리스트] 존재하지 않는 경우)